widget/WidgetUtils.cpp
@@ -6,6 +6,9 @@
  * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #include "mozilla/WidgetUtils.h"
+#ifdef XP_WIN
+#include "WinUtils.h"
+#endif
 
 namespace mozilla {
 
@@ -89,4 +92,15 @@ nsIntRect RotateRect(nsIntRect aRect,
       return aRect;
   }
 }
+
+uint32_t
+WidgetUtils::IsTouchDeviceSupportPresent()
+{
+#ifdef XP_WIN
+  return WinUtils::IsTouchDeviceSupportPresent();
+#else
+  return 0;
+#endif
+}
+
 } // namespace mozilla
